# GIMS-Chatbot

./: .gitignore  README.md  data.txt  injust_chromadb.py  main.py  pyproject.toml  scrapper.py
chatbot-ui/: package-lock.json
chroma_db/: chroma.sqlite3
pages/: gimsedu.in.txt  gimsedu.in_about-gims.txt  gimsedu.in_about-gims_.txt  gimsedu.in_academic-calender_.txt  gimsedu.in_acca.txt  gimsedu.in_achievements_.txt  gimsedu.in_admission-faqs.txt  gimsedu.in_admission-faqs_.txt  gimsedu.in_admission.txt  gimsedu.in_admission_.txt  gimsedu.in_aicte-approvals_.txt  gimsedu.in_alumni-2_.txt  gimsedu.in_anti-ragging-committee_.txt  gimsedu.in_anti-sexual-harrassment-committee_.txt  gimsedu.in_apply-online_.txt  gimsedu.in_areas-of-research_.txt  gimsedu.in_aspire-club_.txt  gimsedu.in_auditorium_.txt  gimsedu.in_b-s-pradeep.txt  gimsedu.in_bachelor-of-business-administration-bba.txt  gimsedu.in_bachelor-of-commerce-b-com.txt  gimsedu.in_bachelor-of-commerce-b-com_#apply.txt  gimsedu.in_bachelor-of-computer-applications-bca.txt  gimsedu.in_bachelor-of-computer-applications-bca_#apply.txt  gimsedu.in_basavaraju-s.txt  gimsedu.in_best-practices_.txt  gimsedu.in_betatronix-2_.txt  gimsedu.in_business-lab.txt  gimsedu.in_business-lab_.txt  gimsedu.in_chinmaye-p.txt  gimsedu.in_cisco-center-of-excellence_.txt  gimsedu.in_clubs_.txt  gimsedu.in_computer-lab.txt  gimsedu.in_computer-lab_.txt  gimsedu.in_contact_.txt  gimsedu.in_curriculum_.txt  gimsedu.in_deepika-v.txt  gimsedu.in_department-of-commerce-and-management-2.txt  gimsedu.in_department-of-commerce-and-management-2_.txt  (+90 more)
(+2 files in other folders)
