[project]
name = "a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "fastapi>=0.135.2",
    "langchain-ollama>=1.1.0",
    "lxml>=6.0.2",
    "openai>=2.29.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
]
